# rake

./: .env.example  .gitignore  README.md  config.base.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: handle.py  lib.py  main.py  router.py  settings.py  utils.py
app/extra/: types.py
app/handlers/: __init__.py
app/handlers/flaresolverr/: __init__.py  options.py
app/handlers/httpx/: __init__.py
app/handlers/primp/: __init__.py
app/lib/: flare_cache.py  rate_limit.py  valkey.py
app/markdown/: html2text.py  markdownify.py
deploy/: README.md  nginx-config
